# lightspeed-controller-sacn

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md  SCANNER_INTEGRATION.md  generate_icon.py  inspect_link.py  lighting_config.json  lighting_engine.py  link_manager.py  main.py  package_mac.sh  requirements.txt  test_link_isolated.py
.cargo/: config.toml
.github/workflows/: windows-build.yml
Lightspeed.app/Contents/Resources/: AppIcon.icns
examples/: scanner_demo.rs
scripts/: package_windows.ps1  package_windows_from_mac.sh
src/: audio.rs  db.rs  engine.rs  main.rs  midi.rs  model.rs  scanner.rs
templates/: index.html
