[package]
name = "lightspeed"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1" # UI
url = "=2.5.0"    # Pin to avoid icu_normalizer issue
sacn = "0.10.0"    # Lighting
glam = "0.25.0"   # Math
serde = { version = "1.0", features = ["derive"] }
rusty_link = "0.3.3"
serde_json = "1.0"
cpal = "0.13"
coreaudio-sys = "=0.2.15" # Force older version
anyhow = "1.0"
once_cell = "1.19"
env_logger = "0.11"
log = "0.4"
home = "=0.5.9" # Pin to avoid edition2024
pollster = "0.2" # For async blocking if needed
rand = "0.8"
midir = "0.10.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.14"
image = "0.24"
